--- a/public/index.html
+++ b/public/index.html
@@ -316,7 +316,7 @@
                 <tr>
                   <th>ID</th>
                   <th>Titulo</th>
-                  <th>Id_Artista</th>
+                  <th>Nombre</th>
                 </tr>
               </thead>
               <tbody id="Album-body">
@@ -463,7 +463,7 @@
   .then((data) =>{
     let content = ''
     for(let row of data){
-      content += '<tr><td>' + row.AlbumId + '</td><td>' + row.Title + '</td><td>' + row.ArtistId + '</td></tr>' 
+      content += '<tr><td>' + row.AlbumId + '</td><td>' + row.Title + '</td><td>' + row.Name + '</td></tr>' 
     }
 
     document.getElementById('Album-body').innerHTML = content
